[package]
name = "page_monitor"
version = "0.3.0"
authors = ["Will Harader <wharader@gmail.com>"]
edition = "2018"

[dependencies]
curl = "0.4.25"
diesel = { version = "1.0.0", features = ["mysql"] }
diff = "0.1.11"
dotenv = "0.15"
dotenv_codegen = "0.15"
html5ever = "0.25"
lazy_static = "1.4.0"
markup5ever="0.10"
pm_rcdom = { path = "pm_rcdom" }
regex = "1.5.5"
structopt = "0.2.14"
